# Logos-Continuum-Rust

./: README.md  start-rust.sh  start.sh
.github/workflows/: desktop-side-by-side.yml
local_docs/: parser_events.jsonl
local_docs_dev/: card_id_registry.json  parser_events.jsonl  parser_settings.json
local_docs_dev/uploaded_docs/: Mega_LD_Backfile_Part_2_Imapcts_Calculus_Malthus_Cap-1-1.docx  Mega_LD_Backfile_Part_2_Impacts_Offense-1-1.docx  PlanoWest-AnRi-Aff-_01_---uk-season-opener-Round-2-1-1.docx  PlanoWest-AnRi-Aff-_01_---uk-season-opener-Round-3-1-1.docx  PlanoWest-AnRi-Aff-_05_---fbk-round-robin-Round-1-1-1.docx  PlanoWest-AnRi-Aff-_07_---glenbrooks-Quarters-1-1.docx  Tactical_Nuclear_Penguins_PIC-1-1.docx  (+2 more)
logos-web/: TAURI_IPC_PORT_CHECKLIST.md  TAURI_MIGRATION.md  package.json
logos-web/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
logos-web/src-tauri/src/: main.rs
rust-backend/: API_CONTRACT_PY_RUST.md  Cargo.toml  Dockerfile  README.md  synonyms.txt
rust-backend/crates/logos-core/: Cargo.toml
rust-backend/crates/logos-core/src/: lib.rs
rust-backend/local_docs/: Mega LD Backfile Part 1 .docx.md  PlanoWest-AnRi-Aff-(06)---fbk-Round-3.docx  PlanoWest-AnRi-Aff-(07)---glenbrooks-Quarters.docx.md  card_id_registry.json  parser_events.jsonl
rust-backend/src/: app_config.rs  lib.rs  main.rs  scraper_common.rs
scripts/: collect_desktop_metrics.py
tmp/: 1nc.json  bench-test_upload.py  card53_py.json  check_p.py  check_rust  check_rust.rs  mod.py  test_api_53.py
verbatim-parser /: api.py  card_id_registry.py  search.py  synonyms.txt
(+105 files in other folders)
