[package]
name = "logos-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
logos-core = { path = "crates/logos-core" }
axum = { version = "0.7", features = ["multipart"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
libc = "0.2"
num_cpus = "1"
once_cell = "1"
quick-xml = "0.38"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
roaring = { version = "0.10", features = ["serde"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
