[package]
name = "logos-tauri"
version = "1.2.5"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
logos-core = { path = "../../rust-backend/crates/logos-core" }
logos-backend = { path = "../../rust-backend" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
